--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Reports</string>
+
+    <string name="loginScreen_label_email">Email</string>
+    <string name="loginScreen_label_password">Password</string>
+    <string name="loginScreen_button_login">Sign in</string>
 </resources>
