RA-4 Add error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="loginScreen_button_login">Sign in</string>
     <string name="loginScreen_error_login">Unable to sign in. Try again</string>
+    <string name="loginScreen_error_invalidCredentials">Invalid credentials</string>
     <string name="loginScreen_label_email">Email</string>
     <string name="loginScreen_label_password">Password</string>
 </resources>
