--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="common_button_register">Sign up</string>
     <string name="common_error_unauthorized">You have been logged out</string>
     <string name="common_error_unknown">Unknown</string>
+    <string name="createReportScreen_label_description">Description</string>
+    <string name="createReportScreen_label_title">Title</string>
+    <string name="createReportScreen_title">Create report</string>
     <string name="loginScreen_button_hidePassword">Hide password</string>
     <string name="loginScreen_button_login">Sign in</string>
     <string name="loginScreen_button_showPassword">Show password</string>
