--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="common_button_saveReport">Save report</string>
     <string name="common_error_unauthorized">You have been logged out</string>
     <string name="common_error_unknown">Unknown</string>
+    <string name="common_label_characterCounter">%1$d/%2$d</string>
     <string name="createReportScreen_label_description">Description</string>
     <string name="createReportScreen_label_title">Title</string>
     <string name="createReportScreen_title">Create report</string>
