--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="common_error_unauthorized">You have been logged out</string>
     <string name="common_error_unknown">Unknown</string>
     <string name="common_label_characterCounter">%1$d/%2$d</string>
+    <string name="createReportScreen_error_descriptionEmpty">Empty description</string>
+    <string name="createReportScreen_error_save">Unable to create report. Try again</string>
+    <string name="createReportScreen_error_titleEmpty">Empty title</string>
     <string name="createReportScreen_label_description">Description</string>
     <string name="createReportScreen_label_title">Title</string>
     <string name="createReportScreen_title">Create report</string>
