--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="common_label_characterCounter">%1$d/%2$d</string>
     <string name="common_label_permission">Permission</string>
     <string name="common_label_settings">Settings</string>
+    <string name="createReportScreen_button_deleteAttachment">Delete attachment</string>
     <string name="createReportScreen_error_descriptionEmpty">Empty description</string>
     <string name="createReportScreen_error_save">Unable to create report. Try again</string>
     <string name="createReportScreen_error_titleEmpty">Empty title</string>
