--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,25 @@
 <resources>
     <string name="app_name">Reports</string>
 
+    <string name="common_button_addFile">Add file</string>
     <string name="common_button_back">Back</string>
     <string name="common_button_createReport">Create report</string>
     <string name="common_button_register">Sign up</string>
     <string name="common_button_saveReport">Save report</string>
+    <string name="common_button_takePhoto">Take photo</string>
     <string name="common_error_unauthorized">You have been logged out</string>
     <string name="common_error_unknown">Unknown</string>
     <string name="common_error_ups">Ups, something went wrong</string>
     <string name="common_label_cameraPermissionRationale">Camera permission is required to add report attachments</string>
     <string name="common_label_cancel">Cancel</string>
     <string name="common_label_characterCounter">%1$d/%2$d</string>
+    <string name="common_label_imagesPermissionRationale">Storage permission is required to add report attachments</string>
     <string name="common_label_permission">Permission</string>
     <string name="common_label_settings">Settings</string>
     <string name="createReportScreen_button_deleteAttachment">Delete attachment</string>
+    <string name="createReportScreen_error_addAttachment">Unable to save attachment</string>
     <string name="createReportScreen_error_descriptionEmpty">Empty description</string>
     <string name="createReportScreen_error_save">Unable to create report. Try again</string>
-    <string name="createReportScreen_error_addAttachment">Unable to save attachment</string>
     <string name="createReportScreen_error_titleEmpty">Empty title</string>
     <string name="createReportScreen_label_description">Description</string>
     <string name="createReportScreen_label_title">Title</string>
