--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="common_button_takePhoto">Take photo</string>
     <string name="common_error_unauthorized">You have been logged out</string>
     <string name="common_error_unknown">Unknown</string>
-    <string name="common_error_ups">Ups, something went wrong</string>
+    <string name="common_error_oops">Oops, something went wrong</string>
     <string name="common_label_cameraPermissionRationale">Camera permission is required to add report attachments</string>
     <string name="common_label_cancel">Cancel</string>
     <string name="common_label_characterCounter">%1$d/%2$d</string>
