--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="common_button_register">Sign up</string>
     <string name="common_button_saveReport">Save report</string>
     <string name="common_button_takePhoto">Take photo</string>
+    <string name="common_button_login">Sign in</string>
     <string name="common_error_unauthorized">You have been logged out</string>
     <string name="common_error_unknown">Unknown</string>
     <string name="common_error_oops">Oops, something went wrong</string>
@@ -25,7 +26,6 @@
     <string name="createReportScreen_label_title">Title</string>
     <string name="createReportScreen_title">Create report</string>
     <string name="loginScreen_button_hidePassword">Hide password</string>
-    <string name="loginScreen_button_login">Sign in</string>
     <string name="loginScreen_button_showPassword">Show password</string>
     <string name="loginScreen_error_invalidCredentials">Invalid credentials</string>
     <string name="loginScreen_error_login">Unable to sign in. Try again</string>
