--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="common_button_back">Back</string>
     <string name="common_button_createReport">Create report</string>
     <string name="common_button_login">Sign in</string>
+    <string name="common_button_logout">Logout</string>
     <string name="common_button_register">Sign up</string>
     <string name="common_button_saveReport">Save report</string>
     <string name="common_button_takePhoto">Take photo</string>
