--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,12 @@
     <string name="common_label_cancel">Cancel</string>
     <string name="common_label_characterCounter">%1$d/%2$d</string>
     <string name="common_label_imagesPermissionRationale">Storage permission is required to add report attachments</string>
+    <string name="common_label_logout">Logout</string>
+    <string name="common_label_logoutQuestion">Are you sure you want to logout?</string>
+    <string name="common_label_no">No</string>
     <string name="common_label_permission">Permission</string>
     <string name="common_label_settings">Settings</string>
     <string name="common_label_yes">Yes</string>
-    <string name="common_label_no">No</string>
     <string name="createReportScreen_button_deleteAttachment">Delete attachment</string>
     <string name="createReportScreen_error_addAttachment">Unable to save attachment</string>
     <string name="createReportScreen_error_descriptionEmpty">Empty description</string>
